# sf_gdn

sf_gdn/: package.xml  setup.cfg  setup.py
sf_gdn/launch/: simple_symforce_example.xml
sf_gdn/sf_gdn/: .#TODO.org  TODO.org  bearing_publisher.py  connections_diagram.graphml  factor_graph.py  matching_publisher.py  odometry_service.py  publisher_member_function.py  subscriber_member_function.py
sf_gdn/sf_gdn/documentation/: TODO.org  connections_diagram.graphml  residual_notebook.ipynb  residuals.md
sf_gdn/sf_gdn/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
sf_gdn/sf_gdn/log/: latest_build
sf_gdn_interfaces/: CMakeLists.txt  package.xml
sf_gdn_interfaces/msg/: LandmarkBearings.msg  LandmarkMatch3D.msg
sf_gdn_interfaces/srv/: OdometryFactor.srv
